[gd_scene load_steps=14 format=2]

[ext_resource path="res://sprite/Spaceship-shooter-gamekit/spritesheets/enemy-small.png" type="Texture" id=1]
[ext_resource path="res://script/KamikazeEnemy.gd" type="Script" id=2]
[ext_resource path="res://sprite/Spaceship-shooter-gamekit/spritesheets/explosion.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 5.5 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="GDScript" id=5]

[node name="KamikazeEnemy" type="KinematicBody2D" groups=["Enemy"]]
position = Vector2( 2, 0 )
rotation = 3.14159
scale = Vector2( 3, 3 )
collision_layer = 2
collision_mask = 15
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2.38419e-07 )
shape = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 8, -9.53674e-07 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 2.02656e-06, -4.76837e-07 )
scale = Vector2( 0.8, 0.55 )

[node name="Timer" type="Timer" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = -1.5708
frames = SubResource( 4 )
animation = "dead"
script = SubResource( 5 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 5

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -2.38419e-07 )
shape = SubResource( 1 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
